DMC-599 teams connector imlemented